fixing body and head script

--- a/app/templates/tag-manager/body-content.njk
+++ b/app/templates/tag-manager/body-content.njk
@@ -1,11 +1,5 @@
-{% if googleTagManagerKey %}
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NQ7QYDS14"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-1NQ7QYDS14');
-</script>
+{% if googleTagManagerKey %}<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJ5C78H"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 {% endif %}
