--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -7,9 +7,8 @@
 {% set assetPath = urlPrefix + "/assets" %}
 {% set timeoutPath = urlPrefix + "/session-timeout" %}
 {% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant - GOV.UK" %}
-{% block pageTitle %}
-  {{siteTitle}}
-{% endblock %}
+
+
 
 {% block head %}
 {% if cookiesPolicy.analytics %}
@@ -17,6 +16,10 @@
   {% endif %}
   <meta name="robots" content="noindex, nofollow">
   <%= htmlWebpackPlugin.tags.headTags %>
+{% endblock %}
+
+{% block pageTitle %}
+  {{siteTitle}}
 {% endblock %}
 
 {% block header %}
@@ -47,9 +50,9 @@
   {% if not cookiesPolicy.confirmed %}
     {% include "cookies/cookie-banner.njk" %}
   {% endif %}
-  {% if cookiesPolicy.analytics %}
+  {# {% if cookiesPolicy.analytics %} #}
     {% include "tag-manager/body-content.njk" %}
-  {% endif %}
+  {# {% endif %} #}
 {% endblock %}
 
 {% block footer %}
