--- a/app/templates/tag-manager/body-content.njk
+++ b/app/templates/tag-manager/body-content.njk
@@ -1,4 +1,5 @@
-{% if googleTagManagerKey %}<!-- Google Tag Manager (noscript) -->
+{% if googleTagManagerKey %}
+<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJ5C78H"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
