--- a/app/templates/tag-manager/head-content.njk
+++ b/app/templates/tag-manager/head-content.njk
@@ -1,10 +1,10 @@
-{% if googleTagManagerKey %}<!-- Google tag (gtag.js) -->
+{% if googleTagManagerKey %}
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=GT-MJPRKW7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'GT-MJPRKW7');
 </script>
 {% endif %}
