--- a/app/templates/tag-manager/head-content.njk
+++ b/app/templates/tag-manager/head-content.njk
@@ -1,5 +1,10 @@
 {% if googleTagManagerKey %}
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ googleTagManagerKey }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GT-MJPRKW7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'GT-MJPRKW7');
+</script>
 {% endif %}
