--- a/app/templates/tag-manager/head-content.njk
+++ b/app/templates/tag-manager/head-content.njk
@@ -3,7 +3,9 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id={{analyticsTagKey}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  var referrer = document.referrer;
+  var host = window.location.hostname;
+  function gtag(){dataLayer.push({...arguments, referrer, host});}
   gtag('js', new Date());
   gtag('config', '{{analyticsTagKey}}');
 </script>
