--- a/app/templates/tag-manager/head-content.njk
+++ b/app/templates/tag-manager/head-content.njk
@@ -3,16 +3,16 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id={{analyticsTagKey}}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    var referrer = document.referrer || 'direct';
+    {# var referrer = document.referrer || 'direct'; #}
     var host = window.location.hostname;
-    var grantType = document.title.split("-")[1]
+    var grantType = 'Water Management'
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
     gtag('config', '{{analyticsTagKey}}', {
-      referrer: referrer,
-      hostname: host,
+      {# referrer: referrer, #}
+      host_name: host,
       grant_type: grantType
     });
   </script>
